infra/manifests/backbone/03-questdb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: questdb
  namespace: sovereign-genesis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: questdb
  serviceName: questdb-public
  template:
    metadata:
      labels:
        app: questdb
    spec:
      containers:
      - env:
        - name: QDB_CAIRO_COMMIT_LAG
          value: '1000'
        - name: QDB_CAIRO_MAX_UNCOMMITTED_ROWS
          value: '100000'
        image: us-central1-docker.pkg.dev/cogctl-gke-v01/sovereign-tfs/questdb:v3.1-customer
        imagePullPolicy: Always
        name: metricsdb
        ports:
        - containerPort: 9000
        - containerPort: 9009
        - containerPort: 8812
      restartPolicy: Always
      terminationGracePeriodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: questdb
  name: questdb-public
  namespace: sovereign-genesis
spec:
  ports:
  - name: http
    port: 9000
    protocol: TCP
    targetPort: 9000
  - name: ilp
    port: 9009
    protocol: TCP
    targetPort: 9009
  - name: sql
    port: 8812
    protocol: TCP
    targetPort: 8812
  selector:
    app: questdb
  type: ClusterIP
